# leafline

./: .gitignore  README.md  api_execution_flow.md
api/: .cursorrules  README.md  agents.md  main.py  pyproject.toml
api/.github/: copilot-instructions.md
api/adapter/: __init__.py  ai_adapter.py  plant_id_adapter.py  sandbox_executor.py  storage_adapter.py
api/adapter/impl/: openrouter_adapter.py  plant_id_adapter_impl.py  sandbox_executor_impl.py  supabase_storage_adapter.py
api/config/: container.py  cors.py  database.py  seed_db.py
api/controller/: chat_controller.py  diagnosis_controller.py  plant_controller.py
api/domain/enum/: __init__.py  diagnosis_status.py  message_role.py  prompt_type.py
api/domain/error/: errors.py
api/domain/model/: care_schedule.py  chat_message.py  diagnosis_session.py  general_chat.py  plant.py
api/domain/orm/: __init__.py  base.py  chat_message_orm.py  diagnosis_session_orm.py  general_chat_orm.py  plant_orm.py
api/domain/prompt/: diagnosis_kernel_prompt.txt  general_plant_discussion_prompt.txt  plant_care_prompt.txt
api/dto/: chat_start_dto.py  chat_update_dto.py  diagnosis_response_dto.py  diagnosis_start_dto.py  diagnosis_update_dto.py  plant_creation_dto.py
api/factory/: care_schedule_factory.py
api/middleware/: auth_middleware.py
api/repository/: chat_repository.py  diagnosis_repository.py  plant_repository.py  prompt_repository.py
api/repository/impl/: chat_repository_impl.py  diagnosis_repository_impl.py  file_prompt_repository.py  (+1 more)
api/service/: chat_service.py  diagnosis_service.py  plant_service.py
(+67 files in other folders)
